# nnn

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: autograd.ipynb
src/: draw.rs  lib.rs  mlp.rs
src/autograd/: README.md  mod.rs  scalar.rs
