[package]
publish = false
name = "nnn"
version = "0.0.0"
edition = "2021"
description = "nano neural nets"
authors = ["Julian Eager <eagr@tutanota.com>"]
license = "CC BY 4.0"
categories = ["Science"]
keywords = ["backpropagation"]
readme = "README.md"
repository = "https://github.com/eagr/nnn"
include = [
    "src/**/*",
    "README.md",
    "LICENSE-*",
]

[dependencies]
base64 = "0.21"
petgraph = "0.6"
rand = "0.8"
